--- a/four*five.html
+++ b/four*five.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <title>Twin Track Game</title>
-  <link rel="stylesheet" href="./assets/four*five.css">
+  <link rel="stylesheet" href="./css/four*five.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <link rel="icon" href="./images/card games.png" />
 
 </head>
 
@@ -208,7 +208,7 @@
     </div>
   </div>
 
-  <script type="module" src="./assets/four*five.js"></script>
+  <script type="module" src="./js/four*five.js"></script>
 </body>
 
 </html>
