--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
     <title>Track Twin</title>
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
-    <link type="text/css" rel="stylesheet" href="./assets/style.css" />
+    <link type="text/css" rel="stylesheet" href="./css/style.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
-    <script defer src="./assets/script.js"></script>
+    <link rel="icon" href="./images/card games.png" />
+    <script defer src="./js/script.js"></script>
 </head>
 
 <body>
