--- a/three*four.html
+++ b/three*four.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <title>Twin Track Game</title>
-  <link rel="stylesheet" href="./assets/three*four.css">
+  <link rel="stylesheet" href="./css/three*four.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <link rel="icon" href="./images/card games.png" />
 </head>
 
 <body>
@@ -142,7 +142,7 @@
   <div class="overlay display"></div>
 
 
-  <script type="module" src="./assets/three*four.js"></script>
+  <script type="module" src="./js/three*four.js"></script>
 
 </body>
 
