--- a/two*four.html
+++ b/two*four.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
   <title>Twin Track Game</title>
-  <link rel="stylesheet" href="./assets/two*four.css">
+  <link rel="stylesheet" href="./css/two*four.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
+  <link rel="icon" href="./images/card games.png" />
 </head>
 
 <body>
@@ -114,7 +114,7 @@
   <div class="overlay display"></div>
 
 
-  <script type="module" src="./assets/two*four.js"></script>
+  <script type="module" src="./js/two*four.js"></script>
 </body>
 
 </html>
